--- a/index.html
+++ b/index.html
@@ -4751,7 +4751,9 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 
 
                                         <div class="et_pb_text_inner">Copyright © 2023 &#8211; A Plus Driveways &#038;
-                                            Landscapes Ltd</div> <a href="./t&c.html"><strong>T&C</strong></a>
+                                            Landscapes Ltd</div> 
+                                            <a href="./termsandconditions.html"><strong>Terms and Conditions</strong></a>
+                                            <a href="./termsandconditions.html"><strong>Complaints Policy</strong></a>
                                     </div>
                                 </div>
 
