--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
-    <title>Document</title>
+    <title>Terms and Conditions</title>
 </head>
 
 <body>
@@ -32,7 +32,7 @@
                         <a class="nav-link " href="./about.html">About us</a>
                     </li>
                 </ul>
-
+            
             </div>
         </nav>
     </div>
@@ -56,8 +56,8 @@
                 We may make a deduction from the reimbursement for loss in value of any goods supplied,
                 if the loss is the result of unnecessary handling by you.</p>
             <p>
-                We will make the reimbursement without undue delay, and not later than-
-            <ol type="a">
+                We will make the reimbursement without undue delay, and not later than:
+            <ol type="a" style="padding-left:50px;">
                 <li>
                     14 days after the day we receive back from you any goods supplied, or
                 </li>
@@ -76,6 +76,28 @@
                 initial transaction, unless you have expressly agreed otherwise; in any event, you will not
                 incur any fees as a result of the reimbursement.'</p>
         </div>
+
+        <h1>Complaint Policy</h1>
+    
+
+<p>The business always endeavours to provide the best service for every customer. However, on rare occasions, there may be times where a customer may not be completely satisfied.</p>
+
+<p>To ensure the business is able to put things right as soon as possible, please read our complaints procedure below. The business will then be able to respond promptly to ensure complete satisfaction.
+</p>
+<p>As soon as possible after the completion of the works, please inspect the work to ensure everything has been carried out based on the contract terms and the high standards the business aims to achieve.
+</p>
+<p>In the unlikely event there is anything you are not completely satisfied with, please contact the business as soon so the problems can be rectified as soon as possible.
+</p>
+
+<h2>Our Procedure</h2>
+
+<p>Either call, email or write* to us. The business aims to respond within 5 days of receiving your complaint and where possible, will provide you with a date to remedy any issues raised.
+</p>
+<p>Where the business is unable to resolve your complaint using the business complaints procedure, as a Which? Trusted Trader the business uses Dispute Resolution Ombudsman for dispute resolution.
+</p>
+<p>In the unlikely event that the business cannot remedy your complaint to your satisfaction you may wish to refer your complaint to them. If you wish to do so please contact Which? Trusted traders in the first instance on 0117 456 6031.
+</p>
+*please request proof of receipt if posting
     </div>
     '
 
