--- a/index.html
+++ b/index.html
@@ -3978,7 +3978,7 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
                   <a class="nav-link" href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/contact.html">Contact</a>
+                  <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#services">Services</a>
