--- a/contact.html
+++ b/contact.html
@@ -84,56 +84,50 @@
             </div>
         </nav>
     </div>
-    <div class="footer container">
+    <div class="container">
         <div class=" row col-md-6 d-flex align-items-center">
-        <form
-        action=" https://formspree.io/f/xzblpdqz" method="POST">
-        <label for="name">Name</label>
-        <input required type="text" name="name" id="name">
-            <label>
-                Email:
-                <input required type="email" name="email">
-            </label>
-            <label for="phone">Phone Number</label>
-            <input type="number" required name="phone" id="phone">
-            <label>
-                Message:
-                <textarea required name="message"></textarea>
-            </label>
-            <!-- your other form fields go here -->
-            <button type="submit">Send</button>
+            <form action=" https://formspree.io/f/xzblpdqz" method="POST">
+                <label for="name">Name</label>
+                <input required type="text" name="name" id="name">
+                <label>
+                    Email:
+                    <input required type="email" name="email">
+                </label>
+                <label for="phone">Phone Number</label>
+                <input type="number" required name="phone" id="phone">
+                <label>
+                    Message:
+                    <textarea required name="message"></textarea>
+                </label>
+                <!-- your other form fields go here -->
+                <button type="submit">Send</button>
             </form>
         </div>
     </div>
 
-        <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-            <div class="col-md-6 d-flex align-items-center">
-                <a href="./index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                    <img style="width:50px" src="./images/logo2.png" alt="logo">
-                </a>
-
-                <span class="mb-3 mb-md-0 text-muted">Copyright © 2023 &#8211; A Plus Driveways &#038;
-                    Landscapes Ltd</span>
-            </div>
-            <div class="col-md-6 d-flex align-items-center">
-                <a style="text-decoration: none;" href="./termsandconditions.html"><span
-                        class="mb-3 mb-md-0 text-muted">Terms and Conditions</span></a>
-            </div>
-
-            <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-                            <use xlink:href="#twitter"></use>
-                        </svg></a></li>
-                <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-                            <use xlink:href="#instagram"></use>
-                        </svg></a></li>
-                <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
-                            <use xlink:href="#facebook"></use>
-                        </svg></a></li>
-            </ul>
-        </footer>
-
-
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+        <div class="col-md-6 d-flex align-items-center">
+            <a href="./index.html" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <img style="width:50px" src="./images/logo2.png" alt="logo">
+            </a>
+            <span class="mb-3 mb-md-0 text-muted">Copyright © 2023 &#8211; A Plus Driveways &#038;
+                Landscapes Ltd</span>
+        </div>
+        <div class="col-md-6 d-flex align-items-center">
+            <a style="text-decoration: none;" href="./termsandconditions.html"><span
+                    class="mb-3 mb-md-0 text-muted">Terms and Conditions</span></a>
+        </div>
+        <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+                        <use xlink:href="#twitter"></use>
+                    </svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+                        <use xlink:href="#instagram"></use>
+                    </svg></a></li>
+            <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+                        <use xlink:href="#facebook"></use>
+                    </svg></a></li>
+        </ul>
+    </footer>
 </body>
-
 </html>
