--- a/contact.html
+++ b/contact.html
@@ -9,10 +9,57 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>A Plus LTD</title>
+    <title>A Plus LTD | Contact Us</title>
+    <style>
+      .row {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 20px;
+      }
+
+      form {
+        width: 300px;
+      }
+
+      label {
+        display: block;
+        margin-bottom: 10px;
+        font-weight: bold;
+      }
+
+      input,
+      textarea {
+        width: 100%;
+        padding: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        margin-bottom: 15px;
+      }
+
+      button[type="submit"] {
+        background-color: #4caf50;
+        color: white;
+        padding: 10px 20px;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+      button[type="submit"]:hover {
+        background-color: #45a049;
+      }
+
+      footer {
+        background-color: #f5f5f5;
+        padding: 10px;
+      }
+    </style>
   </head>
+
   <body>
-    <header class="header">
+    <div class="header">
       <nav class="navbar mr-auto navbar-expand-lg navbar-light bg-light">
         <button
           class="navbar-toggler"
@@ -26,8 +73,8 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <a class="navbar-brand d-flex align-items-center" href="./index.html">
-          <img src="./images/logo.png" style="width: 80px" alt="" />
-          <span style="margin-left: 5px">Driveways &amp; Landscaping LTD</span>
+          <img src="./images/logo2.ico" style="width: 80px" alt="" />
+          <span style="margin-left: 5px">Driveways & Landscaping LTD</span>
         </a>
         <div
           class="collapse navbar-collapse"
@@ -42,7 +89,7 @@
               <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./services">Services</a>
+              <a class="nav-link" href="#services">Services</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./about.html">About us</a>
@@ -50,72 +97,28 @@
           </ul>
         </div>
       </nav>
-    </header>
-    <main>
-      <h1>Driveways & Landscaping</h1>
-      <h2>Our Services</h2>
-      <div class="flex-container">
-        <figure>
-          <a href="./services.html#driveways"
-            ><img
-              src=".\images\1645300571428_profile-gallery-image.png"
-              alt="Driveways"
-          /></a>
-          <figcaption>
-            <div class="fig-title">Driveways</div>
-          </figcaption>
-        </figure>
-        <figure>
-          <img src=".\images\patio.png" alt="Patio" />
-          <figcaption>
-            <div class="fig-title">Patios</div>
-            <div class="fig-description" style="display: none">Text</div>
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img
-            src=".\images\1632397145865_profile-gallery-image.png"
-            alt="Gray Circles by Tobias van Schneider"
-          />
-          <figcaption>
-            <div class="fig-title">Landscaping</div>
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img
-            src=".\images\turf.png"
-            alt="Man at night by Rendiansyah Nugroho"
-          />
-          <figcaption>
-            <div class="fig-title">
-              <h3>Turf</h3>
-            </div>
-          </figcaption>
-        </figure>
-
-        <figure>
-          <img src="./images/fence.jpg" alt="Fencing" />
-          <figcaption>
-            <div class="fig-title">Fence</div>
-          </figcaption>
-        </figure>
-
-        <figure>
-          <a href="./services.html#decorative_walls"
-            ><img src="./images/decorativewalls.jpg" alt="Decorative Walls"
-          /></a>
-          <figcaption>
-            <div class="fig-title">Decorative Walls</div>
-          </figcaption>
-        </figure>
+    </div>
+    <div class="container">
+      <div class="row col-md-6 d-flex align-items-center">
+        <form action=" https://formspree.io/f/xzblpdqz" method="POST">
+          <label for="name">Name</label>
+          <input required type="text" name="name" id="name" />
+          <label>
+            Email:
+            <input required type="email" name="email" />
+          </label>
+          <label for="phone">Phone Number</label>
+          <input type="text" required name="phone" id="phone" />
+          <label>
+            Message:
+            <textarea required name="message"></textarea>
+          </label>
+          <!-- your other form fields go here -->
+          <button type="submit">Send</button>
+        </form>
       </div>
+    </div>
 
-      <div class="more-container">
-        <a href="./gallery" alt="Show more" class="more">Show more</a>
-      </div>
-    </main>
     <footer
       class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top"
     >
@@ -126,9 +129,8 @@
         >
           <img style="width: 50px" src="./images/logo.png" alt="logo" />
         </a>
-
         <span class="mb-3 mb-md-0 text-muted"
-          >Copyright © 2023 – A Plus Driveways &amp; Landscapes Ltd</span
+          >Copyright © 2023 &#8211; A Plus Driveways &#038; Landscapes Ltd</span
         >
       </div>
       <div class="col-md-6 d-flex align-items-center">
